--- a/Resources/views/ShopifyLandingPage/index.html.twig
+++ b/Resources/views/ShopifyLandingPage/index.html.twig
@@ -14,7 +14,7 @@
 				<th>Status</th>
 				<th>Edit</th>
 				<th>View</th>
-				<th>Statistics</th>
+				{#<th>Statistics</th>#}
 				
 			</tr>
 		</thead>
@@ -28,8 +28,8 @@
 				<td>{{lp.summary}}</td>
 				<td>{{lp.status}}</td>
 				<td><a href="/shopify/lp/{{lp.type|default('ppc')}}/{{lp.id}}/" class="btn btn-primary"><i class="fa fa-pencil-square-o"></i> Edit</a></td>
-				<td><a href="/shopify/lp/{{lp.type|default('ppc')}}/{{lp.id}}/" class="btn btn-primary"><i class="fa fa-eye"></i> View</a></td>
-				<td><a href="/shopify/{{lp.type|default('ppc')}}/{{lp.id}}/" class="btn btn-primary"><i class="fa fa-line-chart"></i> Stats</a></td>
+				<td><a href="https://{{lp.shop}}/tools/fg/lp/test-landing-page/" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i> View</a></td>
+				{# <td><a href="/shopify/{{lp.type|default('ppc')}}/{{lp.id}}/" class="btn btn-primary"><i class="fa fa-line-chart"></i> Stats</a></td> #}
 				
 			</tr>	
 			{% endfor %}
