--- a/Resources/views/ShopifyLandingPage/formPPC.html.twig
+++ b/Resources/views/ShopifyLandingPage/formPPC.html.twig
@@ -82,8 +82,12 @@
                                 {{ form_row(form.content)}}
                                 <div class="form-group">
                                     <div class="col-sm-9 col-sm-offset-2" style="font-size: 0.9em; margin-bottom: -12px;font-style: italic;"><a href="https://daringfireball.net/projects/markdown/">Markdown</a> syntax is supported </div>
-                                </div>
+                                </div>                                
                                 {{ form_row(form.sidebarContent)}}
+                                <div class="form-group">
+                                    <div class="col-sm-9 col-sm-offset-2" style="font-size: 0.9em; margin-bottom: -12px;font-style: italic;">Snippet Used for post content (about us) </div>
+                                </div>                                
+                                {{ form_row(form.postContent)}}
                                 {{ form_row(form.specialOfferLink)}}
 
 														
