--- a/Resources/views/ShopifyContest/contest.html.twig
+++ b/Resources/views/ShopifyContest/contest.html.twig
@@ -34,13 +34,15 @@
     </div>
 	{% endif %}
 
-	{{form_row(form.name)}}
+	{{form_row(form.firstName)}}
+	{{form_row(form.lastName)}}
 	{{form_row(form.email)}}
 	{{form_row(form.location)}}
 	{{form_row(form.description)}}
 	{{form_row(form.photoFile)}}
 	{{form_row(form.photoDate)}}
 	{{form_row(form.photoUrl)}}
+
 
 	<div class="form-group form-checkbox">
 		<div class="col-sm-2"></div>
